--- a/kubernetes/redis.yaml
+++ b/kubernetes/redis.yaml
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app: k8s-node-app--redis
+        app: k8s-node-app-redis
     spec:
       containers:
         - name: redis
