--- a/.github/workflows/harden.yaml
+++ b/.github/workflows/harden.yaml
@@ -1,4 +1,4 @@
-name: "Create cluster using KinD"
+name: Harden 
 on: [pull_request, push]
 
 jobs:
@@ -37,6 +37,9 @@ jobs:
           kubectl apply -f kubernetes/redis.yaml
           sleep 120s
           kubectl get deployment/k8s-node-app
+          sleep 5s
           kubectl port-forward deployment/k8s-node-app 1300:1300 &
+      - name: Curl to verify
+        run: |
+          sleep 5s
           curl localhost:1300
-          kill %1
