--- a/.github/workflows/harden.yaml
+++ b/.github/workflows/harden.yaml
@@ -43,3 +43,45 @@ jobs:
         run: |
           sleep 5s
           curl localhost:1300
+  harden: 
+    needs: [instrument,probe]
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Curl and build Slim SaaS CLI
+        shell: bash
+        run: |
+          curl https://platform.zero.dev.saas.getslim.ai/.service/releases/slim/0.0.7-dev | sh
+          ~/.slim/bin/slim config gen --save --token ${{ secrets.SLIM_TOKEN }}
+      -
+        name: Harden the instrumented container
+        shell: bash
+        run: |
+          docker pull ghcr.io/mritunjaysharma394/k8s-node-app:latest-slim-instrumented
+          NX_ID=$(docker inspect --format '{{ index .Config.Labels "slim.nx"}}' ghcr.io/mritunjaysharma394/k8s-node-app:latest-slim-instrumented)
+          ~/.slim/bin/slim harden --id $NX_ID
+  verify-harden:
+    needs: [instrument, probe, harden]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: engineerd/setup-kind@v0.5.0
+        with:
+          version: "v0.17.0"
+      - name: Setting up KinD and kubectl
+        run: |
+          kubectl cluster-info
+          kubectl get pods -n kube-system
+          echo "current-context:" $(kubectl config current-context)
+          echo "environment-kubeconfig:" ${KUBECONFIG}
+          kubectl apply -f kubernetes/app-hardened.yaml
+          kubectl apply -f kubernetes/redis.yaml
+          sleep 120s
+          kubectl get deployment/k8s-node-app
+          sleep 5s
+          kubectl get pod -l app=k8s-node-app -o jsonpath={..spec.containers[].image}
+          kubectl port-forward deployment/k8s-node-app 1300:1300 &
+      - name: Curl to verify
+        run: |
+          sleep 5s
+          curl localhost:1300
