--- a/.github/workflows/harden.yaml
+++ b/.github/workflows/harden.yaml
@@ -10,7 +10,7 @@ jobs:
         shell: bash
         run: |
           curl https://platform.zero.dev.saas.getslim.ai/.service/releases/slim/0.0.8-dev | sh
-          ~/.slim/bin/slim --debug config gen --save --token ${{ secrets.SLIM_TOKEN }}
+          ~/.slim/bin/slim --debug config gen --save --token ${{ secrets.SLIM_TOKEN }} --endpoint platform.zero.dev.saas.getslim.ai
       -
         name: Instrument the image
         shell: bash
@@ -52,7 +52,7 @@ jobs:
         shell: bash
         run: |
           curl https://platform.zero.dev.saas.getslim.ai/.service/releases/slim/0.0.8-dev | sh
-          ~/.slim/bin/slim config gen --save --token ${{ secrets.SLIM_TOKEN }}
+          ~/.slim/bin/slim config gen --save --token ${{ secrets.SLIM_TOKEN }} --endpoint platform.zero.dev.saas.getslim.ai
       -
         name: Harden the instrumented container
         shell: bash
@@ -77,7 +77,7 @@ jobs:
           kubectl apply -f kubernetes/app-hardened.yaml
           kubectl apply -f kubernetes/redis.yaml
           sleep 120s
-          kubectl get deployment/k8s-node-app
+          kubectl describe deployment/k8s-node-app
           sleep 5s
           kubectl get pod -l app=k8s-node-app -o jsonpath={..spec.containers[].image}
           kubectl port-forward deployment/k8s-node-app 1300:1300 &
