--- a/.github/workflows/harden.yaml
+++ b/.github/workflows/harden.yaml
@@ -125,6 +125,7 @@ jobs:
   #                              and see if it's actually functional.
   verify:
     runs-on: ubuntu-latest
+    needs: [instrument, probe, harden]
     steps:
       - uses: actions/checkout@v3
       - uses: engineerd/setup-kind@v0.5.0
