--- a/.github/workflows/harden.yaml
+++ b/.github/workflows/harden.yaml
@@ -101,6 +101,9 @@ jobs:
             [ "$i" = "5" ] && echo "FAIL" && exit 1
             sleep 5
           done
+      - name: Stop the Pod(s)
+        run: |
+          kubectl scale deployment k8s-node-app --replicas 0
   # The Harden stage: Build a hardened version of the image using the reports
   #                   collected on the previous stage.
   harden:
