--- a/kubernetes/app-instrumented.yaml
+++ b/kubernetes/app-instrumented.yaml
@@ -19,7 +19,7 @@ spec:
       terminationGracePeriodSeconds: 120
       containers:
         - name: app
-          image: ghcr.io/mritunjaysharma394/app:latest-slim-instrumented
+          image: ${INST_IMAGE}
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
