--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,8 +11,8 @@ on:
       - "main"
 
 env:
-  # The image to be build. E.g: ghcr.io/saas-examples-harden-simple-app:9ce...6b
-  IMAGE: ghcr.io/mritunjaysharma394/app:latest
+  # The image to be build. E.g: ghcr.io/saas-examples-harden-kubernetes-deployment:9ce...6b
+  IMAGE: ghcr.io/${{ github.repository }}:${{ github.sha }}
 
 jobs:
   build:
