--- a/.github/workflows/harden.yaml
+++ b/.github/workflows/harden.yaml
@@ -88,7 +88,7 @@ jobs:
           echo "current-context:" $(kubectl config current-context)
       - name: Deploy the instrumented image
         run: |
-          kubectl apply -f kubernetes/app-instrumented.yaml
+          envsubst <  kubernetes/app-instrumented.yaml | kubectl apply -f -
           kubectl apply -f kubernetes/redis.yaml
           kubectl get deployment/app
           kubectl wait --for=condition=Available deployment/app --timeout=60s
@@ -140,7 +140,7 @@ jobs:
           echo "environment-kubeconfig:" ${KUBECONFIG}
       - name: Deploy the hardened image
         run: |
-          kubectl apply -f kubernetes/app-hardened.yaml
+          envsubst <  kubernetes/app-hardened.yaml | kubectl apply -f -
           kubectl apply -f kubernetes/redis.yaml
           kubectl describe deployment/app
           kubectl get pod -l app=app -o jsonpath={..spec.containers[].image}
