--- a/.github/workflows/harden.yaml
+++ b/.github/workflows/harden.yaml
@@ -123,8 +123,16 @@ jobs:
       - name: Harden the Target Image
         run: |
           slim harden --id ${{ needs.instrument.outputs.inst-id }}
-  # The (optional) Verify stage: Run a container using the Hardened Image
-  #                              and see if it's actually functional.
+      - name: Vuln Scan Report
+        run: |
+          export HARD_IMAGE=${{ needs.instrument.outputs.hard-image }}
+          NX_ID=$(slim workflows run --no-cache --image ${HARD_IMAGE} --gen-defn-for vscan 2>/dev/null | jq -r '.["vscan-simple"].id')
+          slim workflows get-result-report --id ${NX_ID} 2>/dev/null | jq . > report.txt
+      - name: Upload vuln-scan result for hardened image 
+        uses: actions/upload-artifact@v3
+        with:
+          name: hardened-image-vuln-scan-report
+          path: report.txt
   verify:
     runs-on: ubuntu-latest
     needs: [instrument, probe, harden]
@@ -141,7 +149,7 @@ jobs:
           echo "environment-kubeconfig:" ${KUBECONFIG}
       - name: Deploy the hardened image
         run: |
-          export INST_IMAGE=${{ needs.instrument.outputs.hard-image }}
+          export HARD_IMAGE=${{ needs.instrument.outputs.hard-image }}
           envsubst <  kubernetes/app-hardened.yaml | kubectl apply -f -
           kubectl apply -f kubernetes/redis.yaml
           kubectl describe deployment/app
